--- a/src/scripts/Rprof.in
+++ b/src/scripts/Rprof.in
@@ -21,7 +21,20 @@
 # Send any bug reports to r-bugs@r-project.org.
 
 use Getopt::Long;
-use R::Utils;
+
+sub R_version {
+    my ($name, $version) = @_;
+    my $RV = $ENV{"R_VERSION"};
+
+    print <<END;
+$name: $RV (r$version)
+
+Copyright (C) 2000 R Core Development Team.
+This is free software; see the GNU General Public Licence version 2
+or later for copying conditions.  There is NO warranty.
+END
+    exit 0;
+}
 
 my $revision = ' $Rev$ ';
 my $version;
