--- a/src/scripts/Makefile.in
+++ b/src/scripts/Makefile.in
@@ -11,11 +11,11 @@ subdir = src/scripts
 include $(top_builddir)/Makeconf
 
 ## don't add '#! R_SHELL' for scripts intend to be run by 'R CMD script'
-SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv Rprof2 \
+SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv Rprof \
   SHLIB Stangle Sweave build ncheck config javareconf rtags
 ## <NOTE>
 ## Need target rules for all elements of SCRIPTS_B_IN/SCRIPTS_B.
-SCRIPTS_B_IN = Rcmd.in Rdiff.in Rprof.in Sd2Rd.in \
+SCRIPTS_B_IN = Rcmd.in Rdiff.in Sd2Rd.in \
   obuild.in check.in f77_f2c.in mkinstalldirs.in pager.in
 SCRIPTS_B = $(SCRIPTS_B_IN:.in=)
 ## </NOTE>
@@ -42,8 +42,6 @@ R: $(SCRIPTS_B) R.fe
 Rcmd: $(srcdir)/Rcmd.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 Rdiff: $(srcdir)/Rdiff.in $(top_builddir)/config.status
-	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-Rprof: $(srcdir)/Rprof.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 Sd2Rd: $(srcdir)/Sd2Rd.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
