Install .cls and .bst files we provide.
git-svn-id: https://svn.r-project.org/R/trunk@52243 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/share/Makefile.in
+++ b/share/Makefile.in
@@ -72,6 +72,8 @@ install-sources: installdirs
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rsharedir)/sh"; \
 	done
 	@for f in $(srcdir)/texmf/*.sty \
+		  $(srcdir)/texmf/*.cls \
+		  $(srcdir)/texmf/*.bst \
 		  $(srcdir)/texmf/*.fd; do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rsharedir)/texmf"; \
 	done
