--- a/configure.ac
+++ b/configure.ac
@@ -1,4 +1,4 @@
-	### configure.ac					-*- Autoconf -*-
+### configure.ac					-*- Autoconf -*-
 ###
 ### Process this file with autoconf to produce a configure script.
 ###
@@ -2456,7 +2456,7 @@ AC_CONFIG_FILES(
   src/scripts/Rdiff
   src/scripts/Sd2Rd
   src/scripts/obuild
-  src/scripts/check
+  src/scripts/ocheck
   src/scripts/f77_f2c
   src/scripts/mkinstalldirs
   src/scripts/pager
