--- a/src/scripts/Makefile.in
+++ b/src/scripts/Makefile.in
@@ -12,11 +12,11 @@ include $(top_builddir)/Makeconf
 
 ## don't add '#! R_SHELL' for scripts intend to be run by 'R CMD script'
 SCRIPTS_S = BATCH COMPILE INSTALL LINK REMOVE Rd2dvi Rdconv Rprof \
-  SHLIB Stangle Sweave build ncheck config javareconf rtags
+  SHLIB Stangle Sweave build check config javareconf rtags
 ## <NOTE>
 ## Need target rules for all elements of SCRIPTS_B_IN/SCRIPTS_B.
 SCRIPTS_B_IN = Rcmd.in Rdiff.in Sd2Rd.in \
-  obuild.in check.in f77_f2c.in mkinstalldirs.in pager.in
+  obuild.in ocheck.in f77_f2c.in mkinstalldirs.in pager.in
 SCRIPTS_B = $(SCRIPTS_B_IN:.in=)
 ## </NOTE>
 
@@ -47,7 +47,7 @@ Sd2Rd: $(srcdir)/Sd2Rd.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 obuild: $(srcdir)/obuild.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
-check: $(srcdir)/check.in $(top_builddir)/config.status
+ocheck: $(srcdir)/ocheck.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
 f77_f2c: $(srcdir)/f77_f2c.in $(top_builddir)/config.status
 	@cd $(top_builddir) && $(SHELL) ./config.status $(subdir)/$@
