--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -8,13 +8,13 @@ R_HOME = ../..
 SCRIPTDIR = bin
 
 all: \
-  $(R_HOME)/$(SCRIPTDIR)/obuild.pl $(R_HOME)/$(SCRIPTDIR)/check.pl \
+  $(R_HOME)/$(SCRIPTDIR)/obuild.pl $(R_HOME)/$(SCRIPTDIR)/ocheck.pl \
   $(R_HOME)/$(SCRIPTDIR)/config.sh $(R_HOME)/$(SCRIPTDIR)/Rdconv.sh \
   $(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh $(R_HOME)/$(SCRIPTDIR)/Sd2Rd.pl \
   $(R_HOME)/$(SCRIPTDIR)/SHLIB.sh \
   $(R_HOME)/$(SCRIPTDIR)/Stangle.sh $(R_HOME)/$(SCRIPTDIR)/Sweave.sh
 
-$(R_HOME)/$(SCRIPTDIR)/check.pl: check.in
+$(R_HOME)/$(SCRIPTDIR)/ocheck.pl: ocheck.in
 	@$(SED) -e 1d $< > $@
 
 $(R_HOME)/$(SCRIPTDIR)/obuild.pl: obuild.in
