--- a/src/gnuwin32/installer/Makefile
+++ b/src/gnuwin32/installer/Makefile
@@ -43,8 +43,8 @@ GW_INFO_FILES = COPYRIGHTS README.Rterm rw-FAQ
 ETC_FILES = Rprofile.site Rconsole Rdevga rgb.txt repositories Rcmd_environ
 
 
-# we don't want share/{Makefile.in,sh} installed
-SHARE_DIRS = R licenses locale make perl texmf zoneinfo
+# we don't want share/{Makefile.in,java,perl,sh} installed
+SHARE_DIRS = R encodings licenses locale make texmf zoneinfo
 
 all: $(RPREFIX)-$(SUFF).exe
 msi: $(RPREFIX)-win32.msi
