--- a/src/scripts/Rcmd.in
+++ b/src/scripts/Rcmd.in
@@ -23,13 +23,19 @@ else
   export PERLLIB
 fi
 
-## Append 'share/texmf' to TeX's input search path.
+## Append 'share/texmf/...' to TeX's input search path.
 if test -z "$TEXINPUTS}"; then
-  TEXINPUTS=".:${R_SHARE_DIR}/texmf:"
+  TEXINPUTS=".:${R_SHARE_DIR}/texmf/tex/latex:"
 else
-  TEXINPUTS=".:${TEXINPUTS}:${R_SHARE_DIR}/texmf:"
+  TEXINPUTS=".:${TEXINPUTS}:${R_SHARE_DIR}/texmf/tex/latex:"
 fi
-export TEXINPUTS
+export BSTINPUTS
+if test -z "$BSTINPUTS}"; then
+  BSTINPUTS=".:${R_SHARE_DIR}/texmf/bibtex/bst:"
+else
+  BSTINPUTS=".:${BSTINPUTS}:${R_SHARE_DIR}/texmf/bibtex/bst:"
+fi
+export BSTINPUTS
 
 . "${R_HOME}/etc${R_ARCH}/Renviron"
 export `sed 's/^ *#.*//; s/^\(.*\)=.*/\1/' "${R_HOME}/etc${R_ARCH}/Renviron"`
