strip out Perl-based build and check
git-svn-id: https://svn.r-project.org/R/trunk@52264 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/share/Makefile.in
+++ b/share/Makefile.in
@@ -14,9 +14,7 @@ distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 DISTFILES = Makefile.in
 
 ## subdirectories of R_HOME/share
-SUBDIRS_WITH_NO_BUILD = R encodings licenses make perl sh texmf java
-## subdirectories of R_HOME/share/perl
-SUBDIRS_SHARE_PERL = R File/Copy
+SUBDIRS_WITH_NO_BUILD = R encodings licenses make sh texmf java
 
 all: Makefile R
 
@@ -39,10 +37,6 @@ installdirs:
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/java"
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/licenses"
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/make"
-	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/perl"
-	@for d in $(SUBDIRS_SHARE_PERL); do \
-	  $(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/perl/$${d}"; \
-	done
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/sh"
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/texmf"
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rsharedir)/texmf/bibtex/bst"
@@ -64,11 +58,6 @@ install-sources: installdirs
 	done
 	@for f in $(srcdir)/make/*.mk; do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rsharedir)/make"; \
-	done
-	@for d in $(SUBDIRS_SHARE_PERL); do \
-	  for f in $(srcdir)/perl/$${d}/*.pm; do \
-	    $(INSTALL_DATA) $${f} "$(DESTDIR)$(rsharedir)/perl/$${d}"; \
-	  done; \
 	done
 	@for f in $(srcdir)/sh/*.sh; do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rsharedir)/sh"; \
