--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -2,30 +2,30 @@
 include ../gnuwin32/MkRules
 R_HOME = ../..
 
-## BATCH, INSTALL, REMOVE, Rprof, build, [n]check 
+## BATCH, INSTALL, REMOVE, Rdiff, Rprof, SHLIB, build, check 
 ## are handled internally in Rcmd.exe
+## COMPILE LINK javareonf rtags are Unix-only
 
-SCRIPTDIR = bin
 
 all: \
-  $(R_HOME)/$(SCRIPTDIR)/config.sh $(R_HOME)/$(SCRIPTDIR)/Rdconv.sh \
-  $(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh $(R_HOME)/$(SCRIPTDIR)/Sd2Rd.pl \
-  $(R_HOME)/$(SCRIPTDIR)/Stangle.sh $(R_HOME)/$(SCRIPTDIR)/Sweave.sh
+  $(R_HOME)/bin/config.sh $(R_HOME)/bin/Rdconv.sh \
+  $(R_HOME)/bin/Rd2dvi.sh $(R_HOME)/bin/Sd2Rd.pl \
+  $(R_HOME)/bin/Stangle.sh $(R_HOME)/bin/Sweave.sh
 
-$(R_HOME)/$(SCRIPTDIR)/Sd2Rd.pl: Sd2Rd.in
+$(R_HOME)/bin/Sd2Rd.pl: Sd2Rd.in
 	@$(SED) -e 1d $< > $@
 
-$(R_HOME)/$(SCRIPTDIR)/Rdconv.sh: Rdconv
+$(R_HOME)/bin/Rdconv.sh: Rdconv
 	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
 
-$(R_HOME)/$(SCRIPTDIR)/Rd2dvi.sh: Rd2dvi
+$(R_HOME)/bin/Rd2dvi.sh: Rd2dvi
 	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
 
-$(R_HOME)/$(SCRIPTDIR)/config.sh: config
+$(R_HOME)/bin/config.sh: config
 	@cp $< $@
 
-$(R_HOME)/$(SCRIPTDIR)/Stangle.sh: Stangle
+$(R_HOME)/bin/Stangle.sh: Stangle
 	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
 
-$(R_HOME)/$(SCRIPTDIR)/Sweave.sh: Sweave
+$(R_HOME)/bin/Sweave.sh: Sweave
 	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
