take Rcmd Sweave, Stangle internal
git-svn-id: https://svn.r-project.org/R/trunk@52369 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/Makefile.win
+++ b/src/scripts/Makefile.win
@@ -2,18 +2,15 @@
 include ../gnuwin32/MkRules
 R_HOME = ../..
 
-## BATCH, INSTALL, REMOVE, Rdconv Rdiff, Rprof, SHLIB, build, check 
+## BATCH, INSTALL, REMOVE, Rdconv Rdiff, Rprof, SHLIB, 
+## Sweave, Stangle, build, check 
 ## are handled internally in Rcmd.exe
-## COMPILE LINK javareonf rtags are Unix-only
+## COMPILE LINK javareconf rtags are Unix-only
 
 
 all: \
   $(R_HOME)/bin/config.sh $(R_HOME)/bin/Rd2dvi.sh \
-  $(R_HOME)/bin/Stangle.sh $(R_HOME)/bin/Sweave.sh \
   $(R_HOME)/bin/Sd2Rd.pl
-
-$(R_HOME)/bin/Sd2Rd.pl: Sd2Rd.in
-	@$(SED) -e 1d $< > $@
 
 $(R_HOME)/bin/config.sh: config
 	@cp $< $@
@@ -21,8 +18,5 @@ $(R_HOME)/bin/config.sh: config
 $(R_HOME)/bin/Rd2dvi.sh: Rd2dvi
 	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
 
-$(R_HOME)/bin/Stangle.sh: Stangle
-	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
-
-$(R_HOME)/bin/Sweave.sh: Sweave
-	@$(SED) -e 's|/bin/R|/bin$${R_ARCH_BIN}/R|' $< > $@
+$(R_HOME)/bin/Sd2Rd.pl: Sd2Rd.in
+	@$(SED) -e 1d $< > $@
