--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -14,7 +14,7 @@ distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 INSTFILES = AUTHORS COPYING COPYING.LIB COPYRIGHTS CRAN_mirrors.csv \
 	KEYWORDS KEYWORDS.db THANKS
 DISTFILES = Makefile.in $(INSTFILES) R.aux Rscript.1 NEWS.Rd
-NON_SVN_INSTFILES = FAQ RESOURCES
+NON_SVN_INSTFILES = FAQ RESOURCES NEWS.rds
 SUBDIRS = html manual
 
 HELP2MAN = $(PERL) $(top_srcdir)/tools/help2man.pl
@@ -33,7 +33,7 @@ R: Makefile svnonly
 	  $(MAKE) rdocdir=$(top_builddir)/doc install-sources; \
 	fi
 
-docs: R.1 NEWS.rds @MAINTAINER_MODE_TRUE@ updateNEWS
+docs: R.1 updateNEWS @MAINTAINER_MODE_TRUE@ $(top_srcdir)/NEWS
 	@(cd manual && $(MAKE) $@)
 
 R.1:
@@ -41,16 +41,20 @@ R.1:
 	  --name="a language for data analysis and graphics" \
 	  $(top_builddir)/bin/R
 
-NEWS.rds: NEWS.Rd
+NEWS.rds: $(srcdir)/NEWS.Rd
 	@$(ECHO) ".saveRDS(tools::parse_Rd(\"$<\"), \"$@\")" | $(R_EXE)
 
-updateNEWS: $(top_srcdir)/NEWS $(srcdir)/html/NEWS.html
+updateNEWS: NEWS.rds ../NEWS html/NEWS.html
 
 $(top_srcdir)/NEWS: $(srcdir)/NEWS.Rd
 	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
 	  $(R_EXE)
 
-$(srcdir)/html/NEWS.html: $(srcdir)/NEWS.Rd
+../NEWS: NEWS.Rds
+	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
+	  $(R_EXE)
+
+html/NEWS.html: NEWS.Rds
 	@$(ECHO) "options(warn=1);tools:::Rd2HTML_NEWS_in_Rd(\"$<\", \"$@\")" | \
 	  $(R_EXE)
 
