add code to build NEWS*
git-svn-id: https://svn.r-project.org/R/trunk@52391 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/manual/Makefile.win
+++ b/doc/manual/Makefile.win
@@ -274,4 +274,5 @@ maintainer-clean: distclean
 ../html/resources.html: resources.texi
 	@$(TEXI2HTML) --no-headers -o $@ $<
 
+## Run from src/gnuwin32/fixed/Makefile
 svnonly: ../FAQ ../RESOURCES ../html/resources.html
