--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -13,7 +13,7 @@ include $(top_builddir)/Makeconf
 distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 INSTFILES = AUTHORS COPYING COPYING.LIB COPYRIGHTS CRAN_mirrors.csv \
 	KEYWORDS KEYWORDS.db THANKS
-DISTFILES = Makefile.in $(INSTFILES) R.aux Rscript.1 NEWS.Rd
+DISTFILES = Makefile.in Makefile.win $(INSTFILES) R.aux Rscript.1 NEWS.Rd
 NON_SVN_INSTFILES = FAQ RESOURCES NEWS.rds
 SUBDIRS = html manual
 
