--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -18,7 +18,7 @@ all:
 	@$(MK) rbuild
 	@$(MK) -C ../library -f Makefile.win all WIN=$(WIN)
 	@$(MK) -C ../library -f Makefile.win docs
-	@$(MK) newsdocs htmldocs docfiles
+	@$(MK) NEWSdocs htmldocs docfiles
 	@$(MK)  -C ../../po -f Makefile.win
 
 rpackages:
