arrange to install NEWS.rds
git-svn-id: https://svn.r-project.org/R/trunk@52394 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/gnuwin32/Makefile
+++ b/src/gnuwin32/Makefile
@@ -284,7 +284,8 @@ distclean: clean
 	$(RM) MkRules Rpwd.exe # do this last of all
 
 veryclean: distclean
-	$(RM) ../../doc/FAQ ../../doc/RESOURCES ../../doc/html/resources.html \
+	$(RM) ../../doc/FAQ ../../doc/RESOURCES ../../doc/NEWS.rds \
+	  ../../doc/html/resources.html ../../doc/html/NEWS.html \
 	  ../../SVN-REVISION # not in SVN sources
 
 cleanwin:
