Preprocess parsed NEWS.Rd for installation.
git-svn-id: https://svn.r-project.org/R/trunk@52404 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -42,7 +42,7 @@ R.1:
 	  $(top_builddir)/bin/R
 
 NEWS.rds: $(srcdir)/NEWS.Rd
-	@$(ECHO) ".saveRDS(tools::parse_Rd(\"$<\"), \"$@\")" | $(R_EXE)
+	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
 
 updateNEWS: NEWS.rds ../NEWS html/NEWS.html
 
