make corresponding change for Windows
git-svn-id: https://svn.r-project.org/R/trunk@52405 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.win
+++ b/doc/Makefile.win
@@ -12,7 +12,7 @@ all: NEWS.rds html/NEWS.html # not yet ../NEWS
 updateNEWS: NEWS.rds html/NEWS.html ../NEWS
 
 NEWS.rds: NEWS.Rd
-	@$(ECHO) ".saveRDS(tools::parse_Rd(\"$<\"), \"$@\")" | $(R_EXE)
+	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
 
 ../NEWS: NEWS.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
