install NEWS.rds
git-svn-id: https://svn.r-project.org/R/trunk@52409 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -81,7 +81,8 @@ install-sources2: installdirs
 	@for f in $(NON_SVN_INSTFILES); do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rdocdir)"; \
 	done
-	$(INSTALL_DATA) $(top_srcdir)/NEWS "$(DESTDIR)$(rdocdir)"
+	@$(INSTALL_DATA) $(top_srcdir)/NEWS "$(DESTDIR)$(rdocdir)"
+	@$(INSTALL_DATA) NEWS.rds "$(DESTDIR)$(rdocdir)"
 install-strip: install
 
 uninstall:
