make use of HTML version of NEWS
git-svn-id: https://svn.r-project.org/R/trunk@52436 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/Makefile.in
+++ b/Makefile.in
@@ -10,7 +10,8 @@ top_builddir = .
 include $(top_builddir)/Makeconf
 
 distdir = $(PACKAGE)-$(VERSION)
-INSTFILES = COPYING NEWS
+INSTFILES = COPYING
+## plus NEWS, but need to wait until it is generated
 NON_SVN_INSTFILES = SVN-REVISION
 DISTFILES = $(INSTFILES) \
 	ChangeLog INSTALL ONEWS OONEWS README VERSION \
@@ -66,9 +67,6 @@ R: Makefile svnonly
 docs: R FORCE
 	-@(cd doc && $(MAKE) $@)
 	-@(cd src/library && $(MAKE) $@)
-## no longer relevant
-#help html latex examples: FORCE
-#	-@(cd src/library && $(MAKE) $@)
 FORCE:
 
 stamp-recommended: R docs
@@ -84,7 +82,7 @@ install install-strip: installdirs svnonly
 	@for f in $(INSTFILES); do \
 	  $(INSTALL_DATA) $(srcdir)/$${f} "$(DESTDIR)$(rhome)"; \
 	done
-	@for f in $(NON_SVN_INSTFILES); do \
+	@for f in NEWS $(NON_SVN_INSTFILES); do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rhome)"; \
 	done
 @WANT_R_FRAMEWORK_TRUE@		$(MAKE) -f $(srcdir)/Makefile.fw top_srcdir=$(top_srcdir) $@
@@ -118,7 +116,7 @@ installdirs:
 uninstall:
 	@(for d in $(SUBDIRS); do rsd="$${d} $${rsd}"; done; \
 	  for d in $${rsd}; do (cd $${d} && $(MAKE) $@); done)
-	@for f in $(INSTFILES) $(NON_SVN_INSTFILES); do \
+	@for f in NEWS $(INSTFILES) $(NON_SVN_INSTFILES); do \
 	  rm -f "$(DESTDIR)$(rhome)/$${f}"; \
 	done
 	@rm -rf "$(DESTDIR)$(Rexecbindir)" "$(DESTDIR)$(rhome)/lib"
@@ -175,7 +173,7 @@ distdir: $(DISTFILES) vignettes
 	    || ln $(srcdir)/$${f} $(distdir)/$${f} 2>/dev/null \
 	    || cp -p $(srcdir)/$${f} $(distdir)/$${f}; \
 	done
-	@for f in $(NON_SVN_INSTFILES) ; do \
+	@for f in NEWS $(NON_SVN_INSTFILES) ; do \
 	  cp -p $${f} $(distdir)/$${f}; \
 	done
 	@for d in $(SUBDIRS); do \
