tweak to uninstallation
git-svn-id: https://svn.r-project.org/R/trunk@52439 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -88,7 +88,7 @@ uninstall:
 	  for d in $(SUBDIRS); do \
 	    (cd $${d} && $(MAKE) $@) || exit 1; \
 	  done; \
-	  for f in $(INSTFILES) $(NON_SVN_INSTFILES) NEWS; do \
+	  for f in $(INSTFILES) $(NON_SVN_INSTFILES) NEWS.rds; do \
 	    rm -f "$(DESTDIR)$(rdocdir)"/$${f}; \
 	  done; \
 	  rmdir "$(DESTDIR)$(rdocdir)" 2>/dev/null \
