--- a/doc/Makefile.win
+++ b/doc/Makefile.win
@@ -8,8 +8,7 @@ include ../src/gnuwin32/MkRules
 
 R_EXE=../$(BINDIR)/Rterm --vanilla --slave
 
-all: NEWS.rds html/NEWS.html # not yet ../NEWS
-updateNEWS: NEWS.rds html/NEWS.html ../NEWS
+all: NEWS.rds html/NEWS.html ../NEWS
 
 NEWS.rds: NEWS.Rd
 	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
