--- a/doc/Makefile.in
+++ b/doc/Makefile.in
@@ -14,6 +14,7 @@ distdir = $(top_builddir)/$(PACKAGE)-$(VERSION)/$(subdir)
 INSTFILES = AUTHORS COPYING COPYING.LIB COPYRIGHTS CRAN_mirrors.csv \
 	KEYWORDS KEYWORDS.db THANKS
 DISTFILES = Makefile.in Makefile.win $(INSTFILES) R.aux Rscript.1 NEWS.Rd
+## NEWS.rds is also installed, but generated later.
 NON_SVN_INSTFILES = FAQ RESOURCES
 SUBDIRS = html manual
 
@@ -33,7 +34,7 @@ R: Makefile svnonly
 	  $(MAKE) rdocdir=$(top_builddir)/doc install-sources; \
 	fi
 
-docs: R.1 updateNEWS
+docs: R.1 NEWS.rds ../NEWS html/NEWS.html
 	@(cd manual && $(MAKE) $@)
 
 R.1:
@@ -43,8 +44,6 @@ R.1:
 
 NEWS.rds: $(srcdir)/NEWS.Rd
 	@$(ECHO) ".saveRDS(tools:::prepare_Rd(tools::parse_Rd(\"$<\"), stages = \"install\"), \"$@\")" | $(R_EXE)
-
-updateNEWS: NEWS.rds ../NEWS html/NEWS.html
 
 ../NEWS: NEWS.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
@@ -68,16 +67,17 @@ install-man: installdirs R.1 Rscript.1
 	@@$(INSTALL_DATA) ${srcdir}/Rscript.1 $(DESTDIR)$(mandir)/man1
 install-message:
 	@$(ECHO) "installing $(subdir) ..."
+## installed from srcdir, including to builddir
 install-sources:
 	@$(MKINSTALLDIRS) "$(DESTDIR)$(rdocdir)"
 	@for f in $(INSTFILES); do \
 	  $(INSTALL_DATA) $(srcdir)/$${f} "$(DESTDIR)$(rdocdir)"; \
 	done
+## installed from builddir
 install-sources2: installdirs
-	@for f in $(NON_SVN_INSTFILES); do \
+	@for f in $(NON_SVN_INSTFILES) NEWS.rds; do \
 	  $(INSTALL_DATA) $${f} "$(DESTDIR)$(rdocdir)"; \
 	done
-	@$(INSTALL_DATA) NEWS.rds "$(DESTDIR)$(rdocdir)"
 install-strip: install
 
 uninstall:
@@ -113,7 +113,7 @@ distclean: clean
 	  (cd $${d} && $(MAKE) $@) || exit 1; \
 	done
 	@if test "$(BUILDDIR_IS_SRCDIR)" = no ; then \
-	  rm -f $(NON_SVN_INSTFILES); \
+	  rm -f $(NON_SVN_INSTFILES) ../NEWS; \
 	fi
 	-@rm -f Makefile R.1
 maintainer-clean: distclean
