produce NEWS in C locale
git-svn-id: https://svn.r-project.org/R/trunk@52444 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/doc/Makefile.win
+++ b/doc/Makefile.win
@@ -15,7 +15,7 @@ NEWS.rds: NEWS.Rd
 
 ../NEWS: NEWS.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2txt_NEWS_in_Rd(\"$<\", \"$@\")" | \
-	  $(R_EXE)
+	  $(R_EXE) LC_ALL=C
 
 html/NEWS.html: NEWS.rds
 	@$(ECHO) "options(warn=1);tools:::Rd2HTML_NEWS_in_Rd(\"$<\", \"$@\")" | \
