run package-specific tests with LANGUAGE=en
git-svn-id: https://svn.r-project.org/R/branches/R-2-11-branch@52451 00db46b3-68df-0310-9c12-caf00c1e9a41

--- a/src/scripts/check.in
+++ b/src/scripts/check.in
@@ -2494,6 +2494,7 @@ sub check_pkg {
 	    }
 	    $cmd = join(" ",
 			("(echo 'tools:::.runPackageTestsR($extra)' |",
+			 "LANGUAGE=en",
 			 &shell_quote_file_path(${R::Vars::R_EXE}),
 			 "--vanilla --slave)") );
 	    if(R_system($cmd)) {
