--- a/src/extra/zlib/Makefile.in
+++ b/src/extra/zlib/Makefile.in
@@ -14,11 +14,10 @@ include $(top_builddir)/Makeconf
 ZLIB_CPPFLAGS = -I$(srcdir) @USE_MMAP_ZLIB_TRUE@ -DUSE_MMAP
 ALL_CPPFLAGS = $(ZLIB_CPPFLAGS) $(R_XTRA_CPPFLAGS) $(CPPFLAGS) $(DEFS)
 
-SOURCES = adler32.c compress.c crc32.c deflate.c infback.c \
-  inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c \
-  gzclose.c gzlib.c gzread.c gzwrite.c
+SOURCES = adler32.c compress.c crc32.c deflate.c gzio.c infback.c \
+  inffast.c inflate.c inftrees.c trees.c uncompr.c zutil.c
 HEADERS = crc32.h deflate.h inffast.h inffixed.h inflate.h inftrees.h \
-  trees.h zconf.h zlib.h zutil.h gzguts.h
+  trees.h zconf.h zlib.h zutil.h
 DEPENDS = $(SOURCES:.c=.d)
 OBJECTS = $(SOURCES:.c=.o)
 @WANT_R_SHLIB_TRUE@ALL_CFLAGS = $(ALL_CFLAGS_LO) @C_VISIBILITY@
